--- a/style.css
+++ b/style.css
@@ -6,10 +6,16 @@ img{
 body{
     background-color: silver;
 }
-button:hover{
+.rounded:hover{
     color: cyan;
     border: 2px dotted pink;
 }
 img:hover{
     border: 4px dotted cyan;
+}
+.easteregg{
+    height: .1px;
+    width: .1px;
+    position: absolute;
+    
 }
