--- a/style.css
+++ b/style.css
@@ -17,5 +17,9 @@ img:hover{
     height: .1px;
     width: .1px;
     position: absolute;
+    bottom: 900px;
+    right: 500px;
+    left: 100px;
+    
     
 }
